# highuvlith

./: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/highuvlith-cli/: Cargo.toml
crates/highuvlith-cli/src/: config.rs  main.rs
crates/highuvlith-cli/src/commands/: materials.rs  mod.rs  simulate.rs  sweep.rs
crates/highuvlith-core/: Cargo.toml
crates/highuvlith-core/benches/: aerial_benchmark.rs
crates/highuvlith-core/src/: aerial.rs  double_patterning.rs  dsa.rs  error.rs  ilt.rs  lib.rs  mask.rs  metrics.rs  mnsl.rs  opc.rs  optics.rs  process.rs  ptychography.rs  quantum.rs  resist.rs  source.rs  stochastic.rs  thinfilm.rs  types.rs
crates/highuvlith-core/src/compute/: cpu.rs  mod.rs
crates/highuvlith-core/src/io/: image_export.rs  mod.rs
crates/highuvlith-core/src/materials/: database.rs  diamond.rs  dispersion.rs  energy.rs  mod.rs
crates/highuvlith-core/src/math/: fft2d.rs  interpolation.rs  mod.rs  zernike.rs
crates/highuvlith-core/src/optics/: mod.rs  schwarzschild.rs  zone_plate.rs
crates/highuvlith-core/tests/: analytical_validation.rs  proptest_physics.rs  test_mnsl.rs
crates/highuvlith-gui/: Cargo.toml
crates/highuvlith-gui/src/: app.rs  main.rs  state.rs
crates/highuvlith-py/: Cargo.toml
crates/highuvlith-py/src/: lib.rs  py_config.rs  py_mnsl.rs  py_results.rs  py_simulation.rs  py_sweep.rs
examples/: generate_demo.py  mnsl_example.py  sim.toml  sim_lpa_fel.toml
python/highuvlith/: __init__.py  _native.pyi  _validation.py  api.py  interactive.py  mnsl.py
python/highuvlith/io/: __init__.py  config_io.py  results_io.py
python/highuvlith/lib_native.dylib.dSYM/Contents/Resources/Relocations/aarch64/: lib_native.dylib.yml
python/highuvlith/viz/: __init__.py  aerial.py  mnsl.py  plotly_viz.py  process_window.py  resist.py
tests/python/: conftest.py  test_aerial.py  test_analytical.py  test_api.py  test_bindings.py  test_io.py  test_mnsl.py  test_sweep.py
