[package]
name = "highuvlith-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "highuvlith"
path = "src/main.rs"

[dependencies]
highuvlith-core = { path = "../highuvlith-core" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
indicatif = "0.17"
anyhow = "1.0"
num = "0.4"
ndarray = "0.16"
