[package]
name = "highuvlith-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["parallel", "image-export"]
parallel = ["dep:rayon"]
image-export = ["dep:image"]

[dependencies]
num = "0.4"
ndarray = "0.16"
rustfft = "6.2"
rayon = { version = "1.10", optional = true }
nalgebra = "0.33"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "2.0"
rand = "0.9"
rand_distr = "0.5"
image = { version = "0.25", optional = true, default-features = false, features = ["png", "tiff"] }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"

[[bench]]
name = "aerial_benchmark"
harness = false
